# ei-zephyr-mic-kws-inference

./: CMakeLists.txt  README.md  prj.conf  sample.yaml  west.yml
boards/: thingy53_nrf5340_cpuapp.overlay
src/: main.cpp
src/inference/: inferencing.cpp  inferencing.h
src/sensors/: ei_accelerometer.cpp  ei_accelerometer.h  ei_inertial.cpp  ei_inertial.h  ei_microphone.cpp
